--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://ak.sail-horizon.com/spm/spm.v1.min.js"></script>
 
-  <title>Vite + React</title>
+  <title>Rising Sun</title>
 </head>
 
 <body>
-  <div id="rising-sun-root"></div>
+  <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
