--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div id="root"></div>
+  <div id="rising-sun-root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
